--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
           </div>
           <img class="menu-icon" src="Access-images/icons8-menu-50.png" alt="">
            <div class="nav-menu">
-              <a href="">HOME</a>
+              <a href="#">HOME</a>
               <a href="about.html">ABOUT</a>
               <a href="product.html">PRODUCTS</a>
               <a href="gallery.html">GALLERY</a>
-              <a>BLOG</a>
-              <a>CONTACT</a>
+              <a href="blog.html">BLOG</a>
+              <a href="contact.html">CONTACT</a>
            </div>
     </div>
     <!-- banner -->
@@ -48,7 +48,7 @@
             High-Pressure Laminate Finished Raised Flooring, Office <br>
             Carpet, and various marble and ceramic finishes Raised <br>Floorings</p>
 
-            <button>Read More</button>
+            <button onclick="navigateToPage()">Read More</button>
         </div> 
         <div class="about-imagesection">
           <img src="Access-images/about-section_11zon.png" alt="">
@@ -299,9 +299,9 @@
           <h3>QUICK LINKS</h3>
           <ul>    
             <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Products</a></li>
-            <li><a href="#">Blog</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="product.html">Products</a></li>
+            <li><a href="blog.html">Blog</a></li>
           </ul>
       </div>
       <div class="footer-section">
