--- a/about.html
+++ b/about.html
@@ -16,12 +16,12 @@
         </div>
         <img class="menu-icon" src="Access-images/icons8-menu-50.png" alt="">
          <div class="nav-menu">
-            <p>HOME</p>
-            <p>ABOUT</p>
-            <p>PRODUCTS</p>
-            <p>GALLERY</p>
-            <p>BLOG</p>
-            <P>CONTACT</P>
+            <a href="index.html">HOME</a>
+            <a href="#">ABOUT</a>
+            <a href="product.html">PRODUCTS</a>
+            <a href="contact.html">GALLERY</a>
+            <a href="blog.html">BLOG</a>
+            <a href="contact.html">CONTACT</a>
          </div>
    </div>
 <!-- .......................banner.................................. -->
@@ -61,19 +61,15 @@
   </div>
   <div class="services-grid">
     <div class="service-box">
-      <span class="icon">icon</span>
       <p>Raised Access Floors</p>
     </div>
     <div class="service-box">
-      <span class="icon">icon</span>
       <p>SPC Flooring</p>
     </div>
     <div class="service-box">
-      <span class="icon">icon</span>
       <p>Office Carpets</p>
     </div>
     <div class="service-box">
-      <span class="icon">icon</span>
       <p>Vinyl Flooring</p>
     </div>
   </div>
