--- a/product.html
+++ b/product.html
@@ -15,12 +15,12 @@
         </div>
         <img class="menu-icon" src="Access-images/icons8-menu-50.png" alt="">
          <div class="nav-menu">
-            <p>HOME</p>
-            <p>ABOUT</p>
-            <p>PRODUCTS</p>
-            <p>GALLERY</p>
-            <p>BLOG</p>
-            <P>CONTACT</P>
+            <a href="index.html">HOME</a>
+            <a href="about.html">ABOUT</a>
+            <a href="#">PRODUCTS</a>
+            <a href="gallery.html">GALLERY</a>
+            <a href="blog.html">BLOG</a>
+            <a href="contact.html">CONTACT</a>
          </div>
       </div>
       <!-- ......................BANNER.................................... -->
