--- a/product.html
+++ b/product.html
@@ -30,7 +30,7 @@
             <p>We provide the very best floor fitting services in UAE</p>
          </div>
          <div class="estimate-container">
-            <h2>NEED HELP? GET YOUR <br>RENOVATION STARTED TODAY</h2>
+            <h2>NEED HELP? GET YOUR <br>FLOORING WORKS STARTED TODAY</h2>
             <button>SCHEDULE AN ESTIMATE</button>
          </div>
       </div>
@@ -42,10 +42,10 @@
                <img src="Access-images/product1.jpg" alt="">
                <div class="product-content">
                   <h3>AFT-ACCESS FLOORING</h3>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>
-                  Voluptatibus libero maxime ullam corporis quae, atque <br>
-                  omnis reiciendis quibusdam   Voluptas, aliquid odit cumque <br>
-                  omnis reiciendis quibusdam  consequatur vitae?</p>
+                  <p>Access Flooring Technology (AFT) provides elevated <br>
+                   flooring systems for modern spaces, ensuring flexible <br>
+                   cable management, improved airflow, durability, and easy <br>
+                   maintenance in commercial buildings. <br></p>
                </div>
             </div>
             
@@ -53,21 +53,21 @@
                <img src="Access-images/product-2.jpg" alt="">
                <div class="product-content">
                   <h3>MERO-TSK GERMANY</h3>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>
-                     Voluptatibus libero maxime ullam corporis quae, atque <br>
-                     omnis reiciendis quibusdam   Voluptas, aliquid odit cumque <br>
-                     omnis reiciendis quibusdam  consequatur vitae?</p>
+                  <p>MEREMERO-TSK Germany specializes in advanced <br>
+                  industrial solutions, offering precision-engineered <br>
+                  technologies, innovative tools, and high-performance <br>
+                  systems  and productivity across global industries.</p>
                </div>
             </div>
 
             <div class="product-card">
                <img src="Access-images/product-3.jpg" alt="">
                <div class="product-content">
-                  <h3>UNITILE-INDIA</h3>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>
-                     Voluptatibus libero maxime ullam corporis quae, atque <br>
-                     omnis reiciendis quibusdam   Voluptas, aliquid odit cumque <br>
-                     omnis reiciendis quibusdam  consequatur vitae?</p>
+                  <h3>AFT-TECH</h3>
+                  <p> AFT-Tech delivers cutting-edge solutions in access <br>
+                   flooring systems, combining innovative technology,<br>
+                  durability, and flexibility to optimize cable management,<br>
+                  airflow, and workspace efficiency for modern infrastructures</p>
                </div>
             </div>
 
@@ -75,10 +75,9 @@
                <img src="Access-images/product-4.jpg" alt="">
                <div class="product-content">
                   <h3>AFRICAN SKIES</h3>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>
-                     Voluptatibus libero maxime ullam corporis quae, atque <br>
-                     omnis reiciendis quibusdam   Voluptas, aliquid odit cumque <br>
-                     omnis reiciendis quibusdam  consequatur vitae?</p>
+                  <p>Belgotex Carpets' African Skies Collection offers premium, <br>
+                   durable carpets inspired by Africa's landscapes, blending <br>
+                   elegance, comfort, and vibrant designs to enhance modern <br> interior spaces.</p>
                </div>
             </div>
 
@@ -86,10 +85,10 @@
                <img src="Access-images/product-5.png" alt="">
                <div class="product-content">
                   <h3>ACADEMIA</h3>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>
-                     Voluptatibus libero maxime ullam corporis quae, atque <br>
-                     omnis reiciendis quibusdam   Voluptas, aliquid odit cumque <br>
-                     omnis reiciendis quibusdam  consequatur vitae?</p>
+                  <p> Belgotex Carpets' Academia Collection features durable, <br>
+                   stylish carpets designed for educational and commercial <br> 
+                   spaces, offering superior performance, comfort, and <br>
+                   acoustics with modern, versatile designs.</p>
                </div>
             </div>
 
@@ -97,10 +96,10 @@
                <img src="Access-images/product-6.jpg" alt="">
                <div class="product-content">
                   <h3>SPC FLOORING</h3>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>
-                     Voluptatibus libero maxime ullam corporis quae, atque <br>
-                     omnis reiciendis quibusdam   Voluptas, aliquid odit cumque <br>
-                     omnis reiciendis quibusdam  consequatur vitae?</p>
+                  <p>SPC Flooring (Stone Plastic Composite) offers durable, <br>
+                   waterproof, and scratch-resistant surfaces with realistic <br>
+                   wood or stone designs, ideal for high-traffic areas in <br>
+                   residential and commercial spaces.</p>
                </div>
             </div>
 
@@ -108,10 +107,10 @@
                <img src="Access-images/product-7.jpg" alt="">
                <div class="product-content">
                   <h3>LVT FLOORING</h3>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>
-                     Voluptatibus libero maxime ullam corporis quae, atque <br>
-                     omnis reiciendis quibusdam   Voluptas, aliquid odit cumque <br>
-                     omnis reiciendis quibusdam  consequatur vitae?</p>
+                  <p>LVT Flooring (Luxury Vinyl Tile) combines durability, <br>
+                   water resistance, and realistic wood or stone visuals, <br>
+                   offering versatile, stylish, and low-maintenance solutions <br>
+                   for residential and commercial interiors.</p>
                </div>
             </div>
 
@@ -119,10 +118,10 @@
                <img src="Access-images/product-8.jpg" alt="">
                <div class="product-content">
                   <h3>VINYL FLOORING</h3>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>
-                     Voluptatibus libero maxime ullam corporis quae, atque <br>
-                     omnis reiciendis quibusdam   Voluptas, aliquid odit cumque <br>
-                     omnis reiciendis quibusdam  consequatur vitae?</p>
+                  <p>Vinyl Flooring provides a durable, water-resistant, and <br>
+                   cost-effective solution with versatile designs, offering <br>
+                   comfort underfoot and easy maintenance for residential, <br>
+                   commercial, and high-traffic spaces</p>
                </div>
             </div>
 
