--- a/about.html
+++ b/about.html
@@ -14,15 +14,19 @@
         <div class="navlogo-section">
           <img src="Access-images/acess-whitelogo.png" alt="">
         </div>
-        <img class="menu-icon" src="Access-images/icons8-menu-50.png" alt="">
-         <div class="nav-menu">
-            <a href="index.html">HOME</a>
-            <a href="#">ABOUT</a>
+        
+        <input type="checkbox" id="checking">
+        <label for="checking"><img src="Access-images/icons8-menu-50.png" alt=""></label>
+        <div class="nav-items">
+            <input type="checkbox" id="checking">
+            <label for="checking"><img src="Access-images/icons8-close-30.png" alt=""></label>
+            <a href="#">HOME</a>
+            <a href="about.html">ABOUT</a>
             <a href="product.html">PRODUCTS</a>
-            <a href="contact.html">GALLERY</a>
+            <a href="gallery.html">GALLERY</a>
             <a href="blog.html">BLOG</a>
             <a href="contact.html">CONTACT</a>
-         </div>
+        </div>
    </div>
 <!-- .......................banner.................................. -->
     <div class="banner-container">
