--- a/gallery.html
+++ b/gallery.html
@@ -19,10 +19,10 @@
             <div class="nav-items">
                 <input type="checkbox" id="checking">
                 <label for="checking"><img src="Access-images/icons8-close-30.png" alt=""></label>
-                <a href="#">HOME</a>
+                <a href="index.html">HOME</a>
                 <a href="about.html">ABOUT</a>
                 <a href="product.html">PRODUCTS</a>
-                <a href="gallery.html">GALLERY</a>
+                <a href="#">GALLERY</a>
                 <a href="blog.html">BLOG</a>
                 <a href="contact.html">CONTACT</a>
             </div>
