--- a/about.html
+++ b/about.html
@@ -20,8 +20,8 @@
         <div class="nav-items">
             <input type="checkbox" id="checking">
             <label for="checking"><img src="Access-images/icons8-close-30.png" alt=""></label>
-            <a href="#">HOME</a>
-            <a href="about.html">ABOUT</a>
+            <a href="index.html">HOME</a>
+            <a href="#">ABOUT</a>
             <a href="product.html">PRODUCTS</a>
             <a href="gallery.html">GALLERY</a>
             <a href="blog.html">BLOG</a>
