--- a/about.html
+++ b/about.html
@@ -42,14 +42,14 @@
     <div class="about-content">
        <span>ABOUT US</span>
 
-       <p>Welcome to Access Floor, a trusted leader among flooring suppliers <br>
-       in the UAE, specializing in premium flooring solutions for commercial <br>
-       spaces. As a reliable carpet supplier in the UAE, we offer durable and <br>
-       stylish office carpets tailored to professional environments.Our expertise <br>
-      in raised access floors in the UAE ensures innovative and functional designs <br>
+       <p>Welcome to Access Floor, a trusted leader among flooring suppliers 
+       in the UAE, specializing in premium flooring solutions for commercial 
+       spaces. As a reliable carpet supplier in the UAE, we offer durable and 
+       stylish office carpets tailored to professional environments.Our expertise
+      in raised access floors in the UAE ensures innovative and functional designs
        for modern workplaces</p>
 
-      <p>Partner with Access Floors, one of the top flooring companies in the UAE, <br>
+      <p>Partner with Access Floors, one of the top flooring companies in the UAE, 
        for commercial flooring solutions that combine quality, functionality, and style.</p>
 
         <!-- <button>Read More</button> -->
@@ -130,10 +130,10 @@
       <div class="footer-section">
           <h3>OUR PRODUCTS</h3>
           <ul>
-              <li><a href="#">Steel Cement Encapsulated</a></li>
-              <li><a href="#">Calcium Sulphate</a></li>
-              <li><a href="#">Office Carpet</a></li>
-              <li><a href="#">Woodcore</a></li>
+            <li><a href="product.html">Raised Access Floor</a></li>
+            <li><a href="product.html">Office Carpets</a></li>
+            <li><a href="product.html">SPC Flooring </a></li>
+            <li><a href="product.html">LVT Flooring</a></li>
           </ul>
       </div>
       <div class="footer-section contact-info">
