--- a/index.html
+++ b/index.html
@@ -31,9 +31,7 @@
     </div>
     <!-- banner -->
      <div class="banner-container">
-        <h1>"Welcome to Access Floor UAE"</h1>
-        <!-- <p>We provide all kinds of commercial flooring solutions,<br> We make it a prority to offer flexible services</p> -->
-        <button>Get Quote</button>
+      <h1>WELCOME TO ACCESS FLOOR</h1>
      </div>
 </div>
     <!-- about -->
@@ -42,15 +40,15 @@
         <div class="about-content">
            <h2>Friendly expertise & <br>Unrivaled service</h2>
 
-           <p>Access Floors Bldg. Mat. & Elect. Trdg. L.LC, founded in 2008 <br>
-            by Managing Director Ramesh N Shetty, has successfully <br>
-            completed large-scale raised access flooring projects, meeting <br>
-            tight deadlines and achieving high customer satisfaction <br>
+           <p>Access Floors Bldg. Mat. & Elect. Trdg. L.LC, founded in 2008 
+            by Managing Director Ramesh N Shetty, has successfully 
+            completed large-scale raised access flooring projects, meeting 
+            tight deadlines and achieving high customer satisfaction 
             through quality control and reputable suppliers.</p>
 
-            <p>The company has expanded its product portfolio to include <br>
-            High-Pressure Laminate Finished Raised Flooring, Office <br>
-            Carpet, and various marble and ceramic finishes Raised <br>Floorings</p>
+            <p>The company has expanded its product portfolio to include 
+            High-Pressure Laminate Finished Raised Flooring, Office 
+            Carpet, and various marble and ceramic finishes Raised Floorings</p>
 
             <button onclick="navigateToPage()">Read More</button>
         </div> 
@@ -60,7 +58,7 @@
     </div>
 
     <!-- Details -->
-     <div class="detail-container">
+     <!-- <div class="detail-container">
         <div class="detail-title">
             <p>US IN NUMBERS</p>
         </div>
@@ -81,7 +79,7 @@
                 <p>Project</p> 
              </div>
         </div>
-     </div>
+     </div> -->
 
     <!-- product -->
   <div class="productpage-container">
@@ -216,8 +214,8 @@
   <div class="Projectbox-container">
       <div class="project-box">
           <div class="projectbox-info">
-              <h3>Project 1</h3>
-              <p>Project Details</p>
+              <h3>MOHAP Offices, Dubai Digital Park </h3>
+              <p> 8000 Sqm</p>
           </div>
       </div>
       <div class="project-box">
@@ -228,7 +226,7 @@
       </div>
       <div class="project-box">
           <div class="projectbox-info">
-              <h3>Project 3</h3>
+              <h3>Data Center Anti-Static Flooring</h3>
               <p>Project Details</p>
           </div>
       </div>
@@ -240,8 +238,8 @@
       </div>
       <div class="project-box">
           <div class="projectbox-info">
-              <h3>Project 5</h3>
-              <p>Project Details</p>
+              <h3>ADNEC Exbhition Halls</h3>
+              <p>4500 sqm</p>
           </div>
       </div>
       <div class="project-box">
@@ -294,10 +292,10 @@
       <div class="footer-section">
           <h3>OUR PRODUCTS</h3>
           <ul>
-              <li><a href="#">Steel Cement Encapsulated</a></li>
-              <li><a href="#">Calcium Sulphate</a></li>
-              <li><a href="#">Office Carpet</a></li>
-              <li><a href="#">Woodcore</a></li>
+              <li><a href="product.html">Raised Access Floor</a></li>
+              <li><a href="product.html">Office Carpets</a></li>
+              <li><a href="product.html">SPC Flooring </a></li>
+              <li><a href="product.html">LVT Flooring</a></li>
           </ul>
       </div>
       <div class="footer-section contact-info">
