--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,8 @@
 </head>
 <body>
 <div class="contactweb-container">
+<div class="navbanner-container">
+
        <!-- ................navbar............................... -->
        <div class="navbar-container">
         <div class="navlogo-section">
@@ -31,6 +33,7 @@
     <div class="contact-title">
         <h1>CONTACT US</h1>
     </div>
+  </div>
 
     <section class="contact-us">
         <div class="contact-inf">
@@ -67,19 +70,19 @@
         <div class="footer-section">
             <h3>QUICK LINKS</h3>
             <ul>    
-              <li><a href="#">Home</a></li>
-              <li><a href="#">About</a></li>
-              <li><a href="#">Products</a></li>
-              <li><a href="#">Blog</a></li>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="about.html">About</a></li>
+              <li><a href="product.html">Products</a></li>
+              <li><a href="blog.html">Blog</a></li>
             </ul>
         </div>
         <div class="footer-section">
             <h3>OUR PRODUCTS</h3>
             <ul>
-                <li><a href="#">Steel Cement Encapsulated</a></li>
-                <li><a href="#">Calcium Sulphate</a></li>
-                <li><a href="#">Office Carpet</a></li>
-                <li><a href="#">Woodcore</a></li>
+              <li><a href="product.html">Raised Access Floor</a></li>
+              <li><a href="product.html">Office Carpets</a></li>
+              <li><a href="product.html">SPC Flooring </a></li>
+              <li><a href="product.html">LVT Flooring</a></li>
             </ul>
         </div>
         <div class="footer-section contact-info">
