--- a/gallery.html
+++ b/gallery.html
@@ -103,19 +103,19 @@
             <div class="footer-section">
                 <h3>QUICK LINKS</h3>
                 <ul>    
-                  <li><a href="#">Home</a></li>
-                  <li><a href="#">About</a></li>
-                  <li><a href="#">Products</a></li>
-                  <li><a href="#">Blog</a></li>
+                  <li><a href="index.html">Home</a></li>
+                  <li><a href="about.html">About</a></li>
+                  <li><a href="product.html">Products</a></li>
+                  <li><a href="blog.html">Blog</a></li>
                 </ul>
             </div>
             <div class="footer-section">
                 <h3>OUR PRODUCTS</h3>
                 <ul>
-                    <li><a href="#">Steel Cement Encapsulated</a></li>
-                    <li><a href="#">Calcium Sulphate</a></li>
-                    <li><a href="#">Office Carpet</a></li>
-                    <li><a href="#">Woodcore</a></li>
+                  <li><a href="product.html">Raised Access Floor</a></li>
+                  <li><a href="product.html">Office Carpets</a></li>
+                  <li><a href="product.html">SPC Flooring </a></li>
+                  <li><a href="product.html">LVT Flooring</a></li>
                 </ul>
             </div>
             <div class="footer-section contact-info">
