--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </div>
     <!-- banner -->
      <div class="banner-container">
-      <h1>WELCOME TO ACCESS FLOOR</h1>
+      <!-- <h1>WELCOME TO ACCESS FLOOR</h1> -->
      </div>
 </div>
     <!-- about -->
@@ -272,7 +272,7 @@
   <!-- ESTIMATE -->
   <div class="estimate-container">
     <h2>NEED HELP? GET YOUR <br>FLOORING WORKS STARTED TODAY</h2>
-    <button>SCHEDULE AN ESTIMATE</button>
+    <button onclick="navigatePage()">SCHEDULE AN ESTIMATE</button>
   </div>
 
   <!-- footer -->
