--- a/product.html
+++ b/product.html
@@ -35,7 +35,7 @@
          </div>
          <div class="estimate-container">
             <h2>NEED HELP? GET YOUR <br>FLOORING WORKS STARTED TODAY</h2>
-            <button>SCHEDULE AN ESTIMATE</button>
+            <button onclick="navigatePage()">SCHEDULE AN ESTIMATE</button>
          </div>
       </div>
       <!-- ...........................products............................. -->
