--- a/gallery.html
+++ b/gallery.html
@@ -37,29 +37,29 @@
 
         <div class="item1">
           <div class="item-content">
-            <h3>AFT-RAISED</h3>
-            <p>Flooring</p> 
+            <!-- <h3>AFT-RAISED</h3>
+            <p>Flooring</p>  -->
           </div>
         </div>
 
         <div class="item2">
           <div class="item-content">
-            <h3>AFT-RAISED</h3>
-            <p>Flooring</p> 
+            <!-- <h3>AFT-RAISED</h3>
+            <p>Flooring</p>  -->
           </div>
         </div>
 
         <div class="item3">
           <div class="item-content">
-            <h3>AFT-RAISED</h3>
-            <p>Flooring</p> 
+            <!-- <h3>AFT-RAISED</h3>
+            <p>Flooring</p>  -->
           </div>
         </div>
 
         <div class="item4">
           <div class="item-content">
-            <h3>AFT-RAISED</h3>
-            <p>Flooring</p> 
+            <!-- <h3>AFT-RAISED</h3>
+            <p>Flooring</p>  -->
           </div>
         </div>
       </div>
@@ -67,29 +67,29 @@
       <div class="grid-container">
         <div class="item5">
           <div class="item-content">
-            <h3>AFT-RAISED</h3>
-            <p>Flooring</p> 
+            <!-- <h3>AFT-RAISED</h3>
+            <p>Flooring</p>  -->
           </div>
         </div>
 
         <div class="item6">
           <div class="item-content">
-            <h3>AFT-RAISED</h3>
-            <p>Flooring</p> 
+            <!-- <h3>AFT-RAISED</h3>
+            <p>Flooring</p>  -->
           </div>
         </div>
 
         <div class="item7">
           <div class="item-content">
-            <h3>AFT-RAISED</h3>
-            <p>Flooring</p> 
+            <!-- <h3>AFT-RAISED</h3>
+            <p>Flooring</p>  -->
           </div>
         </div>
 
         <div class="item8">
           <div class="item-content">
-            <h3>AFT-RAISED</h3>
-            <p>Flooring</p> 
+            <!-- <h3>AFT-RAISED</h3>
+            <p>Flooring</p>  -->
           </div>
         </div>
         
