--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
   
   <!-- ESTIMATE -->
   <div class="estimate-container">
-    <h2>NEED HELP? GET YOUR <br>FLOORING WORKS STARTED TODAY</h2>
+    <h2>NEED HELP? GET YOUR FLOORING<br> WORKS STARTED TODAY</h2>
     <button onclick="navigatePage()">SCHEDULE AN ESTIMATE</button>
   </div>
 
